# factorio-wfc

./: .gitignore  CMakeLists.txt  README.md  make.bat  pyproject.toml  requirements.txt
core/src/: CMakeLists.txt  bindings.cpp  catalog.h  cell.cpp  cell.h  grid.cpp  grid.h  logger.hpp  overloaded.h  tile.cpp  tile.h  types.h  validate.cpp  validate.h
core/src/rules/: belt_flow.h  belt_rules.cpp  belt_rules.h  empty_rules.cpp  empty_rules.h  input_belt_rules.cpp  input_belt_rules.h  output_belt_rules.cpp  output_belt_rules.h  rule_result.h  rules.cpp  rules.h
core/src/wire/: catalog_codec.cpp  catalog_codec.h  snapshot_codec.cpp  wire_format.h
core/tests/: CMakeLists.txt  test_belt_resources.cpp  test_belt_topology.cpp  test_grid.cpp  test_input_output_belts.cpp  test_snapshot_codec.cpp  test_validation.cpp
gui/src/: logging_config.py  main.py  native_loader.py  snapshot.py  wfc_bridge.py
gui/src/gui/: app.py  belt_lane_layout.py  belt_textures.py  cell_inspector.py  grid_canvas.py  icon_paths.py  tool_panel.py
gui/tests/: conftest.py  test_belt_lane_layout.py  test_belt_textures.py  test_item_icons.py  test_snapshot.py  test_wfc_bridge.py
scripts/: export_item_icons.py
src/: CMakeLists.txt  bindings.cpp  catalog.cpp  cell.cpp  cell.h  grid.cpp  grid.h  tile.cpp  tile.h  types.h  validation.cpp  validation.h
src/wire/: byte_view.h  snapshot_codec.cpp  snapshot_codec.h  wire_format.h
src_py/: main.py  native_loader.py  snapshot.py  wfc_bridge.py
src_py/gui/: app.py  belt_lane_layout.py  belt_textures.py  cell_inspector.py  grid_canvas.py  icon_paths.py  item_textures.py  settings_panel.py  tool_panel.py
tests/: CMakeLists.txt  conftest.py  test_belt_lane_layout.py  test_belt_textures.py  test_catalog_codec.cpp  test_grid.cpp  test_gui_import.py  test_snapshot.py  test_snapshot_codec.cpp  test_validation.cpp  test_wfc_bridge.py
